; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/psp/extr_mp3.c_load_start_module.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/psp/extr_mp3.c_load_start_module.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PSP_MEMORY_PARTITION_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [53 x i8] c"failed to load %s (%08x), trying kuKernelLoadModule\0A\00", align 1
@.str.1 = private unnamed_addr constant [37 x i8] c"kuKernelLoadModule failed with %08x\0A\00", align 1
@.str.2 = private unnamed_addr constant [39 x i8] c"sceKernelStartModule failed with %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @load_start_module to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_start_module(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = load i32, i32* @PSP_MEMORY_PARTITION_KERNEL, align 4
  %9 = call i32 @pspSdkLoadStartModule(i8* %7, i32 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %35

12:                                               ; preds = %1
  %13 = load i8*, i8** %2, align 8
  %14 = load i32, i32* %3, align 4
  %15 = call i32 (i8*, ...) @lprintf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i8* %13, i32 %14)
  %16 = load i8*, i8** %2, align 8
  %17 = call i32 @kuKernelLoadModule(i8* %16, i32 0, i32* null)
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %12
  %21 = load i32, i32* %4, align 4
  %22 = call i32 (i8*, ...) @lprintf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  br label %34

23:                                               ; preds = %12
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @sceKernelStartModule(i32 %24, i32 0, i32* null, i32* %5, i32 0)
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %6, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %23
  %29 = load i32, i32* %6, align 4
  %30 = call i32 (i8*, ...) @lprintf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.2, i64 0, i64 0), i32 %29)
  br label %33

31:                                               ; preds = %23
  %32 = load i32, i32* %4, align 4
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %31, %28
  br label %34

34:                                               ; preds = %33, %20
  br label %35

35:                                               ; preds = %34, %1
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @pspSdkLoadStartModule(i8*, i32) #1

declare dso_local i32 @lprintf(i8*, ...) #1

declare dso_local i32 @kuKernelLoadModule(i8*, i32, i32*) #1

declare dso_local i32 @sceKernelStartModule(i32, i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
